// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDeviceFromEnrolment should verify enrolment 1`] = `
Device {
  "_accountId": "57f93111-0d54-4626-8ed3-70cd0812389f",
  "_created": 2020-01-01T07:00:00.000Z,
  "_events": Array [
    Object {
      "date": 2020-01-01T07:00:00.000Z,
      "name": "device_created",
      "payload": Object {
        "accountId": "57f93111-0d54-4626-8ed3-70cd0812389f",
        "created": 2020-01-01T07:00:00.000Z,
        "macAddress": "6905a710-fbe0-4f4e-83e7-2b6e6545a7be",
        "name": "6905a710-fbe0-4f4e-83e7-2b6e6545a7be",
        "pin": Object {
          "signature": "MTIzNDU2",
          "updated": 2020-01-01T07:00:00.000Z,
        },
        "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIICCgKCAgEAs7ydT9Ndt1Idx9NE2zMhAcecJGUcIlbWeXEtZJA7aKZDDhxYaEGB
WZvX+GRndllnPrOgzoxukITGYvj88bnrGZVZX2ckjIVUR1NxDrhyMjqnn4yDz4UB
Q3Zqt6Gz6DcE+Y9ro6kyhu01KPMyUlhDQAUdwpIJA3saUJ5KZj6ai4NTuXbLqzly
+3H5TMQY4WjrQwj/KRuq8LBEsR4YGaiaFZjHaf5n8+s2Gim/dDgAbIsZS+lGTwgx
nigd7dKP9tG6q3GwNPNBSuuQh6rVbBKbmzBa5rO9SmeZ+HLUyClpzhZ+Hp8yOGAn
qQFZZnokJ6dhxDEQcxPV2HUsYpi3oYSSomXsLgYSja1VT7CgeBchWj07ux6MnagM
AB1+O7O2yzu0LYJc72BQOJaSIrBCh1FcPjM0KC1CPocux2JtqgDL/Td+V5HbLU9n
ZQQoYDcrK3ozSne9ojioUWEwdBEzQmj9e3Wei87EyLe5bn/6tDbg17R7ZlVy2iVs
IFziLHrv3VUIbESy5tTCdzK/qzFR0hlxejT12CTUSkN5eKmfz0pfzt+w8ldEfpws
lBUcoS4sBIR3urpvx1EKM1xaUHfchhIKnY5KGTEM+5rJVwlDq+3lLcrJI3AErTAX
gSR6fcZmKuI4nCfTKl3ykozcPwpEmfRgSBDHKwDJe6ZbK0sL4ScVookCAwEAAQ==
-----END RSA PUBLIC KEY-----
",
        "recoveryKeys": Array [],
        "secret": Object {
          "signature": "NmRiOTJmYmItNTM4NC00OTk0LTgzMTYtNjY3OTVkNTJhMDc4",
          "updated": 2020-01-01T07:00:00.000Z,
        },
        "updated": 2020-01-01T07:00:00.000Z,
      },
    },
  ],
  "_id": "bc54a8e9-3246-4cad-8244-0a1a42c914cd",
  "_macAddress": "6905a710-fbe0-4f4e-83e7-2b6e6545a7be",
  "_name": "6905a710-fbe0-4f4e-83e7-2b6e6545a7be",
  "_pin": Object {
    "signature": "MTIzNDU2",
    "updated": 2020-01-01T07:00:00.000Z,
  },
  "_publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIICCgKCAgEAs7ydT9Ndt1Idx9NE2zMhAcecJGUcIlbWeXEtZJA7aKZDDhxYaEGB
WZvX+GRndllnPrOgzoxukITGYvj88bnrGZVZX2ckjIVUR1NxDrhyMjqnn4yDz4UB
Q3Zqt6Gz6DcE+Y9ro6kyhu01KPMyUlhDQAUdwpIJA3saUJ5KZj6ai4NTuXbLqzly
+3H5TMQY4WjrQwj/KRuq8LBEsR4YGaiaFZjHaf5n8+s2Gim/dDgAbIsZS+lGTwgx
nigd7dKP9tG6q3GwNPNBSuuQh6rVbBKbmzBa5rO9SmeZ+HLUyClpzhZ+Hp8yOGAn
qQFZZnokJ6dhxDEQcxPV2HUsYpi3oYSSomXsLgYSja1VT7CgeBchWj07ux6MnagM
AB1+O7O2yzu0LYJc72BQOJaSIrBCh1FcPjM0KC1CPocux2JtqgDL/Td+V5HbLU9n
ZQQoYDcrK3ozSne9ojioUWEwdBEzQmj9e3Wei87EyLe5bn/6tDbg17R7ZlVy2iVs
IFziLHrv3VUIbESy5tTCdzK/qzFR0hlxejT12CTUSkN5eKmfz0pfzt+w8ldEfpws
lBUcoS4sBIR3urpvx1EKM1xaUHfchhIKnY5KGTEM+5rJVwlDq+3lLcrJI3AErTAX
gSR6fcZmKuI4nCfTKl3ykozcPwpEmfRgSBDHKwDJe6ZbK0sL4ScVookCAwEAAQ==
-----END RSA PUBLIC KEY-----
",
  "_recoveryKeys": Array [],
  "_secret": Object {
    "signature": "NmRiOTJmYmItNTM4NC00OTk0LTgzMTYtNjY3OTVkNTJhMDc4",
    "updated": 2020-01-01T07:00:00.000Z,
  },
  "_uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
  "_updated": 2020-01-01T07:00:00.000Z,
  "_version": 0,
}
`;

exports[`createDeviceFromEnrolment should verify enrolment 2`] = `
Object {
  "device": Object {
    "device": Object {
      "data": Array [
        Object {
          "accountId": "57f93111-0d54-4626-8ed3-70cd0812389f",
          "created": 2020-01-01T07:00:00.000Z,
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "device_created",
              "payload": Object {
                "accountId": "57f93111-0d54-4626-8ed3-70cd0812389f",
                "created": 2020-01-01T07:00:00.000Z,
                "macAddress": "6905a710-fbe0-4f4e-83e7-2b6e6545a7be",
                "name": "6905a710-fbe0-4f4e-83e7-2b6e6545a7be",
                "pin": Object {
                  "signature": "MTIzNDU2",
                  "updated": 2020-01-01T07:00:00.000Z,
                },
                "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIICCgKCAgEAs7ydT9Ndt1Idx9NE2zMhAcecJGUcIlbWeXEtZJA7aKZDDhxYaEGB
WZvX+GRndllnPrOgzoxukITGYvj88bnrGZVZX2ckjIVUR1NxDrhyMjqnn4yDz4UB
Q3Zqt6Gz6DcE+Y9ro6kyhu01KPMyUlhDQAUdwpIJA3saUJ5KZj6ai4NTuXbLqzly
+3H5TMQY4WjrQwj/KRuq8LBEsR4YGaiaFZjHaf5n8+s2Gim/dDgAbIsZS+lGTwgx
nigd7dKP9tG6q3GwNPNBSuuQh6rVbBKbmzBa5rO9SmeZ+HLUyClpzhZ+Hp8yOGAn
qQFZZnokJ6dhxDEQcxPV2HUsYpi3oYSSomXsLgYSja1VT7CgeBchWj07ux6MnagM
AB1+O7O2yzu0LYJc72BQOJaSIrBCh1FcPjM0KC1CPocux2JtqgDL/Td+V5HbLU9n
ZQQoYDcrK3ozSne9ojioUWEwdBEzQmj9e3Wei87EyLe5bn/6tDbg17R7ZlVy2iVs
IFziLHrv3VUIbESy5tTCdzK/qzFR0hlxejT12CTUSkN5eKmfz0pfzt+w8ldEfpws
lBUcoS4sBIR3urpvx1EKM1xaUHfchhIKnY5KGTEM+5rJVwlDq+3lLcrJI3AErTAX
gSR6fcZmKuI4nCfTKl3ykozcPwpEmfRgSBDHKwDJe6ZbK0sL4ScVookCAwEAAQ==
-----END RSA PUBLIC KEY-----
",
                "recoveryKeys": Array [],
                "secret": Object {
                  "signature": "NmRiOTJmYmItNTM4NC00OTk0LTgzMTYtNjY3OTVkNTJhMDc4",
                  "updated": 2020-01-01T07:00:00.000Z,
                },
                "updated": 2020-01-01T07:00:00.000Z,
              },
            },
          ],
          "id": "bc54a8e9-3246-4cad-8244-0a1a42c914cd",
          "macAddress": "6905a710-fbe0-4f4e-83e7-2b6e6545a7be",
          "name": "6905a710-fbe0-4f4e-83e7-2b6e6545a7be",
          "pin": Object {
            "signature": "MTIzNDU2",
            "updated": 2020-01-01T07:00:00.000Z,
          },
          "publicKey": "-----BEGIN RSA PUBLIC KEY-----
MIICCgKCAgEAs7ydT9Ndt1Idx9NE2zMhAcecJGUcIlbWeXEtZJA7aKZDDhxYaEGB
WZvX+GRndllnPrOgzoxukITGYvj88bnrGZVZX2ckjIVUR1NxDrhyMjqnn4yDz4UB
Q3Zqt6Gz6DcE+Y9ro6kyhu01KPMyUlhDQAUdwpIJA3saUJ5KZj6ai4NTuXbLqzly
+3H5TMQY4WjrQwj/KRuq8LBEsR4YGaiaFZjHaf5n8+s2Gim/dDgAbIsZS+lGTwgx
nigd7dKP9tG6q3GwNPNBSuuQh6rVbBKbmzBa5rO9SmeZ+HLUyClpzhZ+Hp8yOGAn
qQFZZnokJ6dhxDEQcxPV2HUsYpi3oYSSomXsLgYSja1VT7CgeBchWj07ux6MnagM
AB1+O7O2yzu0LYJc72BQOJaSIrBCh1FcPjM0KC1CPocux2JtqgDL/Td+V5HbLU9n
ZQQoYDcrK3ozSne9ojioUWEwdBEzQmj9e3Wei87EyLe5bn/6tDbg17R7ZlVy2iVs
IFziLHrv3VUIbESy5tTCdzK/qzFR0hlxejT12CTUSkN5eKmfz0pfzt+w8ldEfpws
lBUcoS4sBIR3urpvx1EKM1xaUHfchhIKnY5KGTEM+5rJVwlDq+3lLcrJI3AErTAX
gSR6fcZmKuI4nCfTKl3ykozcPwpEmfRgSBDHKwDJe6ZbK0sL4ScVookCAwEAAQ==
-----END RSA PUBLIC KEY-----
",
          "recoveryKeys": Array [],
          "secret": Object {
            "signature": "NmRiOTJmYmItNTM4NC00OTk0LTgzMTYtNjY3OTVkNTJhMDc4",
            "updated": 2020-01-01T07:00:00.000Z,
          },
          "uniqueId": "a097a56f506a4091b4c93a8bfb8cec0f",
          "updated": 2020-01-01T07:00:00.000Z,
          "version": 0,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;
